[package]
name = "watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# ── Async runtime ────────────────────────────────────────────────────────────
tokio          = { version = "1",    features = ["full"] }
tokio-stream   = "0.1"
futures        = "0.3"
 
# ── Geyser gRPC (Yellowstone — Helius fork) ──────────────────────────────────
yellowstone-grpc-client = { git = "https://github.com/rpcpool/yellowstone-grpc.git", package = "yellowstone-grpc-client" }
yellowstone-grpc-proto  = { git = "https://github.com/rpcpool/yellowstone-grpc.git", package = "yellowstone-grpc-proto" }
prost          = "0.13"
tonic          = { version = "0.14", features = ["tls-native-roots"] }
 
# ── Solana ───────────────────────────────────────────────────────────────────
solana-sdk        = "2.0"
solana-client     = "2.0"
solana-transaction-status-client-types = "2.0"
anchor-client     = { version = "0.32.1", features = ["async"] }
anchor-lang       = "0.32.1"
 
# ── Redis (alert dedup + hot state cache) ────────────────────────────────────
redis             = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
 
# ── Kafka (durable alert event log) ─────────────────────────────────────────
rdkafka           = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }
 
# ── Database ─────────────────────────────────────────────────────────────────
sqlx              = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
 
# ── Web server (threat feed API) ─────────────────────────────────────────────
axum              = { version = "0.7", features = ["ws", "macros"] }
tower             = "0.5"
tower-http        = { version = "0.6", features = ["cors", "trace"] }
 
# ── Serialization ────────────────────────────────────────────────────────────
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
bincode           = "1"
 
# ── Crypto / hashing ─────────────────────────────────────────────────────────
sha2              = "0.10"
bs58              = "0.5"
 
# ── HTTP client (webhooks) ───────────────────────────────────────────────────
reqwest           = { version = "0.12", features = ["json"] }
 
# ── Utils ────────────────────────────────────────────────────────────────────
anyhow            = "1"
thiserror         = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono            = { version = "0.4", features = ["serde"] }
uuid              = { version = "1",   features = ["v4", "serde"] }
dotenvy           = "0.15"
dashmap           = "6"
hex = "0.4.3"
